<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smzdm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
        <!-- bottom bar -->
    <string name="bottom_bar_index">优惠</string>
    <string name="bottom_bar_group">海淘</string>
    <string name="bottom_bar_store">发现</string>
    <string name="bottom_bar_cart">晒图</string>
    <string name="bottom_bar_more">经验</string>
    
</resources>
